--- a/Yahoo_Finance_Data_Analysis.ipynb
+++ b/Yahoo_Finance_Data_Analysis.ipynb
@@ -1458,7 +1458,7 @@
         "id": "E9JpCdvC4fED"
       },
       "source": [
-        "2. Risk Analysis\n",
+        "2. RISK ANALYSIS\n",
         "\n",
         "How risky is my stock?"
       ]
@@ -1514,7 +1514,7 @@
         "id": "iYF4wEZ44k7Z"
       },
       "source": [
-        "Return Analysis\n",
+        "3.RETURN ANALYSIS\n",
         "\n",
         "Daily and monthly returns of stocks"
       ]
